feat: view pdf init